--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container nav">
         <nav class="navigation">
           <a class="logo" href="./index.html">Web<span>Studio</span></a>
@@ -48,18 +48,17 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="preview">
+      <!-- <section class="preview">
         <div class="container section">
           <h1 class="preview-text">Effective Solutions for Your Business</h1>
           <button type="button" class="preview-btn">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <section class="description">
         <div class="container section">
-          <h2 class="vissually-hidden">Lorem, ipsum.</h2>
           <ul class="descr-list">
             <li class="descr-list-item">
               <div class="icon">
@@ -116,7 +115,7 @@
         </div>
       </section>
 
-      <section class="team">
+      <!-- <section class="team">
         <div class="container section">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -325,9 +324,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container section">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -441,10 +440,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-div container">
         <div class="footer-p-container">
           <a class="footer-logo" href="./index.html"
@@ -512,7 +511,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop">
       <div class="modal">
