--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
       </section>
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container section">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -324,9 +324,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container section">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -440,7 +440,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="footer">
