--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container nav">
         <nav class="navigation">
           <a class="logo" href="./index.html">Web<span>Studio</span></a>
+          <button class="menu-btn">
+            <svg width="24" height="24">
+              <use href="./images/icons.svg#icon-menu-mb"></use>
+            </svg>
+          </button>
           <ul class="navigation-item">
             <li>
               <a class="navigation-link current" href="./index.html">Studio</a>
@@ -48,14 +53,63 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
+    <!-- <div class="menu">
+        <button type="button" class="menu-close-btn">
+          <svg width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <ul class="mob-nav">
+            <li class="mob-nav-item"><a href="">Studio</a></li>
+            <li class="mob-nav-item"><a href="">Portfolio</a></li>
+            <li class="mob-nav-item"><a href="">Contacts</a></li>
+          </ul>
+          <ul class="mob-contact">
+            <li class="mob-contact-item"><a class="contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              ></li>
+            <li class="mob-contact-item"><a class="contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              ></li>
+            <ul class="mob-soc-links">
+              <li class="mob-soc-links-item">
+                <a href="">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-soc-links-item">
+                <a href="">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-soc-links-item">
+                <a href="">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-soc-links-item">
+                <a href="">
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+      </div> -->
     <main>
-      <!-- <section class="preview">
+      <section class="preview">
         <div class="container section">
           <h1 class="preview-text">Effective Solutions for Your Business</h1>
           <button type="button" class="preview-btn">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <section class="description">
         <div class="container section">
