--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer-div container">
         <div class="footer-p-container">
           <a class="footer-logo" href="./index.html"
@@ -565,7 +565,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop">
       <div class="modal">
