--- a/index.html
+++ b/index.html
@@ -54,55 +54,57 @@
         </address>
       </div>
     </header>
-    <!-- <div class="menu">
+    <div class="menu">
         <button type="button" class="menu-close-btn">
           <svg width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <ul class="mob-nav">
-            <li class="mob-nav-item"><a href="">Studio</a></li>
-            <li class="mob-nav-item"><a href="">Portfolio</a></li>
-            <li class="mob-nav-item"><a href="">Contacts</a></li>
+            <li class="mob-nav-item"><a href="" class="mb-menu-links active">Studio</a></li>
+            <li class="mob-nav-item"><a href="" class="mb-menu-links">Portfolio</a></li>
+            <li class="mob-nav-item"><a href="" class="mb-menu-links">Contacts</a></li>
           </ul>
-          <ul class="mob-contact">
-            <li class="mob-contact-item"><a class="contact" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              ></li>
-            <li class="mob-contact-item"><a class="contact" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              ></li>
-            <ul class="mob-soc-links">
-              <li class="mob-soc-links-item">
-                <a href="">
-                  <svg width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-soc-links-item">
-                <a href="">
-                  <svg width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-soc-links-item">
-                <a href="">
-                  <svg width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="mob-soc-links-item">
-                <a href="">
-                  <svg width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-      </div> -->
+          <div class="mb-bottom-part">
+            <ul class="mob-contact">
+              <li class="mob-contact-item"><a class="contact-mb phone" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                ></li>
+              <li class="mob-contact-item"><a class="contact-mb" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                ></li>
+              <ul class="mob-soc-links">
+                <li class="mob-soc-links-item">
+                  <a href="">
+                    <svg class="mb-link-image" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-soc-links-item">
+                  <a href="">
+                    <svg class="mb-link-image" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-soc-links-item">
+                  <a href="">
+                    <svg class="mb-link-image" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mob-soc-links-item">
+                  <a href="">
+                    <svg class="mb-link-image" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+          </div>
+      </div>
     <main>
       <section class="preview">
         <div class="container section">
@@ -386,11 +388,17 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
-                <img
+                <picture>
+                  <source srcset="./images/portfolio1mb.jpg"
+                  media="(min-width: 320px)">
+                 <source srcset="./images/portfolio1.jpg"
+                 media="(min-width: 768px)">
+                 <img
                   src="./images/portfolio1.jpg"
-                  alt="Banking app image"
+                  alt="Online Courses"
                   width="360"
                 />
+                </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -404,11 +412,17 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
-                <img
+                <picture>
+                  <source srcset="./images/portfolio2mb.jpg"
+                  media="(min-width: 320px)">
+                 <source srcset="./images/portfolio2.jpg"
+                 media="(min-width: 768px)">
+                 <img
                   src="./images/portfolio2.jpg"
-                  alt="Cashless Payment"
+                  alt="Online Courses"
                   width="360"
                 />
+                </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -422,11 +436,17 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
-                <img
+                <picture>
+                  <source srcset="./images/portfolio3mb.jpg"
+                  media="(min-width: 320px)">
+                 <source srcset="./images/portfoli03.jpg"
+                 media="(min-width: 768px)">
+                 <img
                   src="./images/portfoli03.jpg"
-                  alt="Meditation App"
+                  alt="Online Courses"
                   width="360"
                 />
+                </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -440,11 +460,17 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
-                <img
+                <picture>
+                  <source srcset="./images/portfolio4mb.jpg"
+                  media="(min-width: 320px)">
+                 <source srcset="./images/portfolio4.jpg"
+                 media="(min-width: 768px)">
+                 <img
                   src="./images/portfolio4.jpg"
-                  alt="Taxi Service"
+                  alt="Online Courses"
                   width="360"
                 />
+                </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -458,11 +484,17 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
-                <img
+                <picture>
+                  <source srcset="./images/portfolio5mb.jpg"
+                  media="(min-width: 320px)">
+                 <source srcset="./images/portfolio5.jpg"
+                 media="(min-width: 768px)">
+                 <img
                   src="./images/portfolio5.jpg"
-                  alt="Screen Illustrations"
+                  alt="Online Courses"
                   width="360"
                 />
+                </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -476,11 +508,18 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
-                <img
+                <picture>
+                  <source srcset="./images/portfolio6-mb.jpg"
+                  media="(min-width: 320px)">
+                 <source srcset="./images/portfolio6.jpg"
+                 media="(min-width: 768px)">
+                 <img
                   src="./images/portfolio6.jpg"
                   alt="Online Courses"
                   width="360"
                 />
+                </picture>
+               
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
