--- a/index.html
+++ b/index.html
@@ -55,56 +55,67 @@
       </div>
     </header>
     <div class="menu">
-        <button type="button" class="menu-close-btn">
-          <svg width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
-        <ul class="mob-nav">
-            <li class="mob-nav-item"><a href="" class="mb-menu-links active">Studio</a></li>
-            <li class="mob-nav-item"><a href="" class="mb-menu-links">Portfolio</a></li>
-            <li class="mob-nav-item"><a href="" class="mb-menu-links">Contacts</a></li>
-          </ul>
-          <div class="mb-bottom-part">
-            <ul class="mob-contact">
-              <li class="mob-contact-item"><a class="contact-mb phone" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                ></li>
-              <li class="mob-contact-item"><a class="contact-mb" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                ></li>
-              <ul class="mob-soc-links">
+      <button type="button" class="menu-close-btn">
+        <svg width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <ul class="mob-nav">
+        <li class="mob-nav-item">
+          <a href="" class="mb-menu-links active">Studio</a>
+        </li>
+        <li class="mob-nav-item">
+          <a href="" class="mb-menu-links">Portfolio</a>
+        </li>
+        <li class="mob-nav-item">
+          <a href="" class="mb-menu-links">Contacts</a>
+        </li>
+      </ul>
+      <div class="mb-bottom-part">
+        <ul class="mob-contact">
+          <li class="mob-contact-item">
+            <a class="contact-mb phone" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="mob-contact-item">
+            <a class="contact-mb" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mob-soc-links">
                 <li class="mob-soc-links-item">
-                  <a href="">
+                  <a class="mob-menu-link" href="#">
                     <svg class="mb-link-image" width="24" height="24">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                      <use href="./images/soc-links-images.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="mob-soc-links-item">
-                  <a href="">
+                  <a class="mob-menu-link" href="#">
                     <svg class="mb-link-image" width="24" height="24">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                      <use href="./images/soc-links-images.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="mob-soc-links-item">
-                  <a href="">
+                  <a class="mob-menu-link" href="#">
                     <svg class="mb-link-image" width="24" height="24">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                      <use href="./images/soc-links-images.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="mob-soc-links-item">
-                  <a href="">
+                  <a class="mob-menu-link" href="#">
                     <svg class="mb-link-image" width="24" height="24">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      <use href="./images/soc-links-images.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
               </ul>
-          </div>
       </div>
+    </div>
     <main>
       <section class="preview">
         <div class="container section">
@@ -389,15 +400,19 @@
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
                 <picture>
-                  <source srcset="./images/portfolio1mb.jpg"
-                  media="(min-width: 320px)">
-                 <source srcset="./images/portfolio1.jpg"
-                 media="(min-width: 768px)">
-                 <img
-                  src="./images/portfolio1.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                  <source
+                    srcset="./images/portfolio1mb.jpg"
+                    media="(min-width: 320px)"
+                  />
+                  <source
+                    srcset="./images/portfolio1.jpg"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
                 </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -413,15 +428,19 @@
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
                 <picture>
-                  <source srcset="./images/portfolio2mb.jpg"
-                  media="(min-width: 320px)">
-                 <source srcset="./images/portfolio2.jpg"
-                 media="(min-width: 768px)">
-                 <img
-                  src="./images/portfolio2.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                  <source
+                    srcset="./images/portfolio2mb.jpg"
+                    media="(min-width: 320px)"
+                  />
+                  <source
+                    srcset="./images/portfolio2.jpg"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
                 </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -437,15 +456,19 @@
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
                 <picture>
-                  <source srcset="./images/portfolio3mb.jpg"
-                  media="(min-width: 320px)">
-                 <source srcset="./images/portfoli03.jpg"
-                 media="(min-width: 768px)">
-                 <img
-                  src="./images/portfoli03.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                  <source
+                    srcset="./images/portfolio3mb.jpg"
+                    media="(min-width: 320px)"
+                  />
+                  <source
+                    srcset="./images/portfoli03.jpg"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="./images/portfoli03.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
                 </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -461,15 +484,19 @@
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
                 <picture>
-                  <source srcset="./images/portfolio4mb.jpg"
-                  media="(min-width: 320px)">
-                 <source srcset="./images/portfolio4.jpg"
-                 media="(min-width: 768px)">
-                 <img
-                  src="./images/portfolio4.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                  <source
+                    srcset="./images/portfolio4mb.jpg"
+                    media="(min-width: 320px)"
+                  />
+                  <source
+                    srcset="./images/portfolio4.jpg"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
                 </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -485,15 +512,19 @@
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
                 <picture>
-                  <source srcset="./images/portfolio5mb.jpg"
-                  media="(min-width: 320px)">
-                 <source srcset="./images/portfolio5.jpg"
-                 media="(min-width: 768px)">
-                 <img
-                  src="./images/portfolio5.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                  <source
+                    srcset="./images/portfolio5mb.jpg"
+                    media="(min-width: 320px)"
+                  />
+                  <source
+                    srcset="./images/portfolio5.jpg"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
                 </picture>
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -509,17 +540,21 @@
             <li class="portfolio-list-item">
               <div class="portfolio-img-container">
                 <picture>
-                  <source srcset="./images/portfolio6-mb.jpg"
-                  media="(min-width: 320px)">
-                 <source srcset="./images/portfolio6.jpg"
-                 media="(min-width: 768px)">
-                 <img
-                  src="./images/portfolio6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                  <source
+                    srcset="./images/portfolio6-mb.jpg"
+                    media="(min-width: 320px)"
+                  />
+                  <source
+                    srcset="./images/portfolio6.jpg"
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
                 </picture>
-               
+
                 <p class="portfolio-anim-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -592,8 +627,13 @@
         <div class="footer-form-div">
           <p class="footer-form-title">Subscribe</p>
           <form class="footer-form">
-            <label  class="footer-form-label">
-              <input class="footer-form-input" type="email" placeholder="E-mail" name="user-email"/>
+            <label class="footer-form-label">
+              <input
+                class="footer-form-input"
+                type="email"
+                placeholder="E-mail"
+                name="user-email"
+              />
             </label>
             <button class="footer-form-btn" type="submit">
               Subscribe
