--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
             <li class="team-member">
               <img
                 class="team-member-img"
+                srcset="./images/img.jpg 1x, ./images/img@2.jpg 2x"
                 src="./images/img.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -240,6 +241,7 @@
             <li class="team-member">
               <img
                 class="team-member-img"
+                srcset="./images/img2.jpg 1x, ./images/img2@2.jpg 2x"
                 src="./images/img2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -291,6 +293,7 @@
             <li class="team-member">
               <img
                 class="team-member-img"
+                srcset="./images/img3.jpg 1x, ./images/img3@2.jpg 2x"
                 src="./images/img3.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -342,6 +345,7 @@
             <li class="team-member">
               <img
                 class="team-member-img"
+                srcset="./images/img4.jpg 1x, ./images/img4@2.jpg 2x"
                 src="./images/img4.jpg"
                 alt="Daniel Wilson"
                 width="264"
