--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
                     media="(min-width: 768px)"
                   />
                   <img
+                  srcset="./images/portfolio1.jpg 1x, ./images/portfolio1@2.jpg 2x"
                     src="./images/portfolio1.jpg"
                     alt="Online Courses"
                     width="360"
@@ -441,6 +442,7 @@
                     media="(min-width: 768px)"
                   />
                   <img
+                  srcset="./images/portfolio2.jpg 1x, ./images/portfolio2@2.jpg 2x"
                     src="./images/portfolio2.jpg"
                     alt="Online Courses"
                     width="360"
@@ -469,6 +471,7 @@
                     media="(min-width: 768px)"
                   />
                   <img
+                  srcset="./images/portfolio3.jpg 1x, ./images/portfolio3@2.jpg 2x"
                     src="./images/portfoli03.jpg"
                     alt="Online Courses"
                     width="360"
@@ -497,6 +500,7 @@
                     media="(min-width: 768px)"
                   />
                   <img
+                  srcset="./images/portfolio4.jpg 1x, ./images/portfolio4@2.jpg 2x"
                     src="./images/portfolio4.jpg"
                     alt="Online Courses"
                     width="360"
@@ -525,6 +529,7 @@
                     media="(min-width: 768px)"
                   />
                   <img
+                  srcset="./images/portfolio5.jpg 1x, ./images/portfolio5@2.jpg 2x"
                     src="./images/portfolio5.jpg"
                     alt="Online Courses"
                     width="360"
@@ -553,6 +558,7 @@
                     media="(min-width: 768px)"
                   />
                   <img
+                  srcset="./images/portfolio6.jpg 1x, ./images/portfolio6@2.jpg 2x"
                     src="./images/portfolio6.jpg"
                     alt="Online Courses"
                     width="360"
