--- a/index.html
+++ b/index.html
@@ -744,9 +744,12 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a href="" class="privacy-link">Privacy Policy</a></label
-            >
+              
+              <div class="privacy-div">
+                I accept the terms and conditions of the
+                <a href="" class="privacy-link">Privacy Policy</a></label
+              >
+              </div>
           </div>
 
           <button type="submit" class="modal-button">Send</button>
